[DEV] Removed hibernate as it does not support SQLite foreign keys. Now just changing code structure.